src/test/deca/syntax/valid/SansObjet/Println-Lower.deca
// Description:
//    Printing a comparison
//
// Results:
//    tree with all the variables as branches
//
// Historique:
//    cree le 08/01/2022

{
        println(x < y);
}
