src/test/deca/syntax/invalid/HelloWorld/Println-TrplEscap.deca
// Description:
//    String with triple escape chars
//
// Results:
//    test_lex : error line 12 on the whole string
//
//
// History:
//    cree le 08/01/2022

{
println("\\\");
}